--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ a{
 }
 
 .navbar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    padding-left: 10px;
+    padding-right: 50px;
 }
 
 .navbar_menu{
@@ -55,3 +55,46 @@ a{
     color: #000;
     border-radius: 5px;
 }
+
+.navbar_bars {
+    display: none;
+    
+    color: white;
+    background-color: transparent;
+
+    border: none;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 833px){
+    .navbar_menu{
+        display: none;
+    }
+    .navbar_bars {
+        display: none;
+        color: white;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        /* navbar_bars에 position 설정 */
+        position: absolute;
+        right: 8px;
+        top: 15px;
+      }
+      .navbar_menu.active {
+        display: flex;
+        padding-top: 50px;
+      }
+      
+      .navbar_links.hide,
+      .navbar_logo.hide {
+        display: none;
+      }
+      .navbar_menu {
+        display: none;
+        flex-direction: column;
+        font-size: 28px;
+        align-items: flex-start;
+      }
+}
+
